done till projects. also has mobile view

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -12,14 +16,14 @@
         <li class="nav-item"><a href="#">HOME</a></li>
         <li class="nav-item"><a href="#overview">OVERVIEW</a></li>
         <li class="nav-item"><a href="#" id="logo">W</a></li>
-        <li class="nav-item"><a href="#">PROJECTS</a></li>
-        <li class="nav-item"><a href="#">CONTACT</a></li>
+        <li class="nav-item"><a href="#projects">PROJECTS</a></li>
+        <li class="nav-item"><a href="#contact">CONTACT</a></li>
       </ul>
     </header>
     <section class="home" id="home">
       <div class="home-left">
         <div class="home-content">
-          <p class="title">-Web Developer</p>
+          <p class="subtitle">-Web Developer</p>
           <h1 class="big">
             WILFREDO <br />
             FERNANDEZ
@@ -35,10 +39,170 @@
           <img src="images/profile.bw.jpg" alt="" />
         </div>
       </div>
+      <div class="arrow">
+        <p>scroll</p>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+          <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
+          />
+        </svg>
+      </div>
     </section>
     <section class="overview" id="overview">
-      <h1>OVERVIEW</h1>
-      <span>comming soon...</span>
+      <div class="overview-top">
+        <div>
+          <h1>
+            Developed various projects using HTML, CSS, and JavaScript. <br />
+            Skilled in backend development, database management, and
+            troubleshooting.
+          </h1>
+          <p>Adaptable, quick learner, and passionate.</p>
+        </div>
+      </div>
+      <div class="overview-mid">
+        <div class="image">
+          <img src="images/me.jpg" alt="" />
+        </div>
+        <div class="info">
+          <h3>WILFREDO FERNANDEZ</h3>
+          <p class="grad">
+            Bachelor of Science in Information Technology <br />
+            Cavite State University - Silang (2021 - 2025)
+          </p>
+          <p>
+            Web Developer <br />
+            Philippines
+          </p>
+          <div class="links">
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                <path
+                  d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+                />
+              </svg>
+            </a>
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                <path
+                  d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z"
+                />
+              </svg>
+            </a>
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                <path
+                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="overview-bottom">
+        <h1 class="skills">SKILLS</h1>
+        <div class="skills">
+          <div class="language">
+            <h4>Language</h4>
+            <ul>
+              <li>JavaScript</li>
+              <li>Html</li>
+              <li>Css</li>
+
+              <li>Php</li>
+              <li>Mysql</li>
+            </ul>
+          </div>
+          <div class="frameworks">
+            <h4>Framework</h4>
+            <ul>
+              <li>Laravel</li>
+              <li>Tailwind</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+          <div class="basic">
+            <h4>Basic</h4>
+            <ul>
+              <li>Codeigniter</li>
+              <li>Phython</li>
+              <li>C++</li>
+              <li>C#</li>
+            </ul>
+          </div>
+          <div class="tools">
+            <h4>Tools</h4>
+            <ul>
+              <li>Visual Studio</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="projects" id="projects">
+      <h1 class="">Projects and Experience</h1>
+      <div class="medtrack">
+        <div class="upper">
+          <div class="m-left">
+            <h2 class="title">1. MedTrack</h2>
+            <h5 class="subtitle">PHP & Laravel-Based Health System</h5>
+            <p class="text">
+              Live Website:
+              <a href="https://medtrack.site/" target="_blank">medtrack.site</a>
+              <br />Developed a digital health records system using PHP,
+              Laravel, and Tailwind CSS to enhance security, streamline
+              processes, and provide residents with convenient online access to
+              their medical records. <br /><br />
+              Implemented user authentication, patient records management, and
+              dashboard features. <br />Designed with a modern UI, with plans to
+              enhance mobile responsiveness.
+            </p>
+          </div>
+          <div class="m-right">
+            <img
+              src="https://images.unsplash.com/photo-1738447429433-69e3ecd0bdd0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyfHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="lower">
+          <div class="item-1">
+            <img
+              src="https://images.unsplash.com/photo-1738748986807-bf1e6d00d58d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+          <div class="item-2">
+            <img
+              src="https://plus.unsplash.com/premium_photo-1734549547939-41f90fdf91cf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw1fHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+          <div class="item-3">
+            <img
+              src="https://images.unsplash.com/photo-1739032713558-017ad58b0fbb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw4fHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="more-projects">
+        <h3>More Projects Comming soon <span class="dot"> ...</span></h3>
+      </div>
+    </section>
+    <section class="contact" id="contact">
+      <div class="contact-upper">
+        <h3>Reach Out & Let’s Create Something Great!</h3>
+        <p>Have a project in mind or just want to say hi? Drop me a message!</p>
+      </div>
+      <div class="contact-lower">
+        <div class="details"></div>
+        .m
+      </div>
     </section>
   </body>
 </html>
