updated social link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             Philippines
           </p>
           <div class="links">
-            <a href="">
+            <a href="https://www.facebook.com/wlfrd.frnndz/" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
@@ -83,7 +83,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/wlfrd.frnndz/" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
@@ -91,7 +91,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="https://github.com/wfredo-dev" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
@@ -99,7 +99,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/wfredo-dev/" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
@@ -253,7 +253,7 @@
       <div class="below">
         <p>&copy; 2025 Wilfredo Fernandez. All rights reserved.</p>
         <div class="socials">
-          <a href="">
+          <a href="https://www.facebook.com/wlfrd.frnndz/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
               <path
@@ -261,7 +261,7 @@
               />
             </svg>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/wlfrd.frnndz/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
               <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
               <path
@@ -269,7 +269,7 @@
               />
             </svg>
           </a>
-          <a href="">
+          <a href="https://github.com/wfredo-dev" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
               <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
               <path
@@ -277,7 +277,7 @@
               />
             </svg>
           </a>
-          <a href="">
+          <a href="https://www.linkedin.com/in/wfredo-dev/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
               <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
               <path
