--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
   </head>
   <body>
     <header class="header">
-      <ul class="nav-list">
+      <button class="burger" id="burger">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </button>
+      <ul class="nav-list" id="nav-list">
         <li class="nav-item"><a href="#">HOME</a></li>
         <li class="nav-item"><a href="#overview">OVERVIEW</a></li>
         <li class="nav-item"><a href="#" id="logo">W</a></li>
@@ -288,5 +296,17 @@
         </div>
       </div>
     </footer>
+    <script>
+      const navlist = document.getElementById("nav-list");
+      const links = document.querySelectorAll("#nav-list a");
+      document.getElementById("burger").addEventListener("click", function () {
+        document.getElementById("nav-list").classList.toggle("show");
+      });
+      links.forEach((link) => {
+        link.addEventListener("click", function () {
+          navlist.classList.remove("show"); // Hide menu
+        });
+      });
+    </script>
   </body>
 </html>
